syntax = "proto3";

option csharp_namespace = "StockServer";

package stocks;

service Updates {
  rpc GetStockUpdates (StockRequest) returns (stream StockReply);
}

message StockRequest {
  repeated string symbols = 1;
}

message StockReply {
  string symbol = 1;
  double bid = 2; // TODO: non-floating point type for no rounding errors
  double ask = 3; // TODO: non-floating point type for no rounding errors
}